@@ -1,12 +1,13 @@
 package com.fjss23.jobsearch.job.payload;
 
-import com.fjss23.jobsearch.company.Company;
 import com.fjss23.jobsearch.job.Job;
-import com.fjss23.jobsearch.job.JobWorkday;
 import com.fjss23.jobsearch.job.JobWorkModel;
+import com.fjss23.jobsearch.job.JobWorkday;
 import com.fjss23.jobsearch.tag.Tag;
 import com.fjss23.jobsearch.tag.payload.TagRequestMapper;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
@@ -22,20 +23,24 @@ public class JobRequestMapper implements Function<JobRequest, Job> {
 
     @Override
     public Job apply(JobRequest jobRequest) {
-        List<Tag> tags = jobRequest.tags().stream().map(tagRequestMapper).collect(Collectors.toList());
-        var company = new Company();
+        List<Tag> tags = jobRequest.tags().stream().map(tagRequestMapper).toList();
+
+        /*Set<JobWorkday> wkDays =
+                jobRequest.workday().stream().map(JobWorkday::valueOf).collect(Collectors.toUnmodifiableSet());
+        Set<JobWorkModel> wkModel =
+                jobRequest.workModel().stream().map(JobWorkModel::valueOf).collect(Collectors.toUnmodifiableSet());
+*/
         return new Job(
                 jobRequest.title(),
-                jobRequest.industry(),
+                jobRequest.role(),
                 jobRequest.salaryFrom(),
                 jobRequest.salaryUpTo(),
-                jobRequest.coin(),
+                jobRequest.salaryCurrency(),
                 jobRequest.location(),
-                JobWorkday.valueOf(jobRequest.workday()),
+                jobRequest.workday(),
                 jobRequest.description(),
-                JobWorkModel.valueOf(jobRequest.workplaceSystem()),
-                jobRequest.howToApply(),
-                company,
-                tags);
+                jobRequest.workModel(),
+                jobRequest.companyName(),
+                new HashSet<>(tags));
     }
 }
